--- a/index.html
+++ b/index.html
@@ -13,22 +13,65 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Home</title>
 </head>
 <body>
   <main id="main-header">
-    <header class=" bg-light">
+    <header class=" curved">
       <div class="container">
         <div class="logo d-flex justify-content-center align-items-center  p-5"><img src="./img/logo.png" alt=""></div>
       </div>
     </header>
   </main>
-  <main id="main-content " class="main-content ">
+  <main id="main-content " class="main-content  ">
     <div class="circels d-flex justify-content-center ">
-      <div class="circel"><a href="#"><i class="fas fa-address-card"></i></a></div>
-      <div class="circel"><a href="#"><i class="fas fa-th"></i></a></div>
-      <div class="circel"><a href="#"><i class="fas fa-sms"></i></a></div>
+      <div class="circel"><a href="#"><i class="fas fa-address-card"></i>About</a></div>
+      <div class="circel"><a href="#"><i class="fas fa-th"></i>Products</a></div>
+      <div class="circel"><a href="#"><i class="fas fa-sms"></i>Contact Us</a></div>
+    </div>
+    <div class="slider my-5 my-5">
+      <div class="col">
+        <div class="container">
+          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleInterval" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="./img/sl1.jpg" class="d-block " alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="./img/sl2.jpg" class="d-block " alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/sl3.jpg" class="d-block " alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="./img/sl4.jpg" class="d-block " alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="colN2 col d-flex justify-content-center align-items-center flex-column text-center ">
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nobis.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, nobis.
+        </p>
+        
+      </div>
     </div>
   </main>
       
